--- a/css/styles.css
+++ b/css/styles.css
@@ -77,9 +77,9 @@ img {
 }
 
 /**
-  |=====================================================================
+  |=====================================================================================================================
   | HEDER STYLES
-  |=====================================================================
+  |=====================================================================================================================
 */
 
 .header-box {
@@ -103,12 +103,15 @@ img {
     color: var(--title-color);}
 
 
-.menu{
-    display: none;}
-.contacts-box{
-    display: none;}
+    @media screen and (max-width: 768px) {
+        .menu,
+        .contacts-box {
+            display: none;
+        }
+        }   
+  
 
-
+ /* Modal menu window ================= */
 .mobile-menu-btn{
     margin-left: auto;
     display: flex;
@@ -119,8 +122,7 @@ img {
     background-color: transparent;
     border: none;
     padding: 0;
-
-}
+        }
 
 @media screen and (min-width:768px) {
     .mobile-menu-btn{
@@ -128,6 +130,133 @@ img {
     }
 }
 
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--white-color);
+    z-index: 900;
+
+    padding: 80px 35px 40px 40px;
+    
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+  }
+
+  .menu-container.is-open {
+    transform: translateX(0);
+  }
+  
+.mobile-menu-btn-close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    width: 24px;
+    height: 24px;
+    background-color: var(--color-cornflower);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color var(--transition-dur-and-func);
+
+    margin: 0; 
+  }
+  
+
+  .mobile-menu-btn-close:hover,
+  .mobile-menu-btn-close:focus{
+    background-color: var(--hover-color);
+  }
+  .mobile-close-btn-icon{
+    transition: fill var(--transition-dur-and-func);
+}
+
+.mobile-menu-btn-close:hover .mobile-menu-btn-close-icon,
+.mobile-menu-btn-close:focus .mobile-menu-btn-close-icon{
+    fill: var(--white-color);
+}
+
+.mobile-menu-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: calc(40/36);
+    text-decoration: none;
+    color: var(--title-color)
+}
+.mobile-menu-item:not(:last-child){
+    margin-bottom: 40px;
+}
+.mobile-menu {
+    margin-bottom: 284px;
+    list-style: none;
+  }
+ 
+.mobile-menu-contacts-tel,
+.mobile-menu-contacts-email{
+    text-decoration: none;
+}
+
+.mobile-menu-contacts-tel {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: calc(40/36);
+    color: var(--accent-color);
+}
+
+.mobile-menu-contacts-email{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: calc(24/20);
+    color: var(--primary-text-color);
+}
+
+.mobile-menu-contacts-item:not(:last-child){
+    margin-bottom: 40px;
+}
+
+.mobile-menu-contacts-item:last-child{
+    margin-bottom: 48px;
+}
+
+ 
+  .mobile-menu .link {
+    display: block;
+    padding: 10px;
+    color: black;
+    text-decoration: none;
+  }
+
+/* Mobile menu social links */
+  .mobile-menu-list{
+    display: flex;
+    gap: 56px;
+  }
+  .mobile-menu-list-item{
+    width: 40px;
+    height: 40px;
+  }
+  .mobile-menu-list-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--accent-color);
+
+    transition: background-color var(--transition-dur-and-func);
+}
+.mobile-menu-list-icon{
+    fill: var(--color-cloud);
+}
+
+/* ================================ */
 /* Tablet styles */
 
 @media screen and (min-width:768px) {
@@ -230,48 +359,6 @@ img {
 
 
 /* ==============================HEADER=================================== */
-/* 
-
-.header-box {
-    display: flex;
-}
-
-/* ===========Contacts============== */
-/* 
-
-
-
-
-/* .menu-link{
-    padding-top: 24px;
-    padding-bottom: 24px;
-
-    text-decoration: none;
-    line-height: 1.5;
-} */
-
-
-
-
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
