--- a/css/styles.css
+++ b/css/styles.css
@@ -51,31 +51,25 @@ img {
 */
 
 .container {
-    padding-left: 16px;
-    padding-right: 16px;
+    max-width: 428px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
     outline: 1px solid tomato;
-}
-
-@media screen and (min-width:480px) {
-    .container{
-        width: 428px;
+  }
+  
+  @media screen and (min-width: 768px) {
+    .container {
+      max-width: 768px;
     }
-}
-
-@media screen and (min-width:768px) {
-    .container{
-        width: 768px;
+  }
+  
+  @media screen and (min-width: 1200px) {
+    .container {
+      max-width: 1158px;
     }
-}
-
-@media screen and (min-width:1200px) {
-    .container{
-        width: 1158px;
-    }
-}
-
+  }
 /**
   |=====================================================================================================================
   | HEDER STYLES
