--- a/css/styles.css
+++ b/css/styles.css
@@ -623,7 +623,72 @@ img {
     display: none;
 }
 
+/* .team-list-title,
+.portfolio-list-title */
+.features-list-title{
+    margin-bottom: 8px;
+    text-align: center;
+    color: var(--title-color);}
+
+
+
+
+    
+.features-list-text{
+    font-weight: 500;
+    line-height: calc(24/16);
+    }
+    
+    @media screen and (max-width: 768px){
+        .features-list-item:not(:last-child){
+            margin-bottom: 72px;}
+    }
+
+    @media screen and (max-width: 1200px){
+        .features-list-title{
+            font-weight: 700;
+            font-size: 36px;
+            line-height: calc(40/36);
+            }
+    }
+
+/* .team-list-title,
+.portfolio-list-title,
+.features-list-title {
+    margin-bottom: 8px;
+} */
+
+
+    @media screen and (min-width: 768px){
+    .features-list-title{
+    text-align: start;
+    }
+    .features-list{
+        display: flex;
+    }  
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px){
+    .features-list{
+        flex-wrap: wrap;
+        justify-content: space-between;
+        column-gap: 24px;
+        row-gap: 72px;
+    }
+    .features-list-item {
+        max-width: 356px;
+        flex-basis: calc((100%-24px)/2);
+    }
+}
+
+
 @media screen and (min-width: 1200px){
+    .features-list{
+        gap: 24px;
+    }
+
+    .features-list-item{flex-basis: calc((100%-72px)/4);}
+    
     .thumb{
         display: flex;
         justify-content: center;
@@ -632,89 +697,39 @@ img {
         height: 112px;
         background-color: var(--color-cloud);
     }
-}
-
-
-
-
-.features-list-title,
-.team-list-title,
-.portfolio-list-title {
-    color: var(--title-color);
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-}
-
-.team-list-title,
-.portfolio-list-title,
-.features-list-title {
-    margin-bottom: 8px;
-}
-
-
-
-.features-list-title{
-margin-bottom: 8px;
-font-weight: 700;
-font-size: 36px;
-line-height: calc(40/36);
-text-align: center;
-color: var(--title-color);}
-@media screen and (min-width: 768px){
-    .features-list-title{
-    text-align: start;
-    }
     
-}
-@media screen and (min-width: 1200px){
-    .features-list-title,
-    .team-list-title,
-    .portfolio-list-title {
+    /* .team-list-title,
+    .portfolio-list-title */
+    .features-list-title {
     color: var(--title-color);
     font-weight: 500;
     font-size: 20px;
-    line-height: 1.2;
+    line-height: calc(24/20);
 }
-    .team-list-title,
+    /* .team-list-title,
     .portfolio-list-title{
-    margin-bottom: 8px;
-}}
+    margin-bottom: 8px;} */
 
-
-.features-list-text{
-    font-weight: 500;
-    line-height: 1.5;
-}
-@media screen and (min-width: 1200px){
     .features-list-text{
         font-weight: 400;}
+    }
 
-    .team-list-text,
+
+
+
+
+
+
+
+
+
+
+
+ 
+    /* .team-list-text,
     .portfolio-list-text {
-        line-height: 1.5;
+        line-height: 1.5;} */
 
-}}
-.features-list-item:not(:last-child){
-    margin-bottom: 72px;
-}
-
-@media screen and (min-width: 768px){
-    .features-list{
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .features-list-item {
-        flex-basis: calc((100%-24px)/2);
-    }
-}
-
-
-
-
-.features-list-item {
-   
-}
 
 /* ================================SECTION OUR WORK============================= */
 
