--- a/css/styles.css
+++ b/css/styles.css
@@ -648,7 +648,7 @@ img {
     display: none;
 }
 
-/* .team-list-title,
+/* 
 .portfolio-list-title */
 .features-list-title{
     margin-bottom: 8px;
@@ -677,7 +677,7 @@ img {
             }
     }
 
-/* .team-list-title,
+/* 
 .portfolio-list-title,
 .features-list-title {
     margin-bottom: 8px;
@@ -723,23 +723,20 @@ img {
         background-color: var(--color-cloud);
     }
     
-    /* .team-list-title,
+    /* 
     .portfolio-list-title */
-    .features-list-title {
+    .features-list-title{
     color: var(--title-color);
     font-weight: 500;
     font-size: 20px;
     line-height: calc(24/20);
 }
-    /* .team-list-title,
-    .portfolio-list-title{
-    margin-bottom: 8px;} */
-
+    
     .features-list-text{
         font-weight: 400;}
     }
 
-    /* .team-list-text,
+    /* 
     .portfolio-list-text {
         line-height: 1.5;} */
 
@@ -763,8 +760,7 @@ img {
         flex-basis: calc((100%-48px)/3);}
     
     
-        /* .features-list,
-        .team-list, */
+        /* .features-list*/
         .work-list {
             display: flex;
             gap: 24px;
@@ -772,12 +768,110 @@ img {
     }
 
 
+/**
+  |=====================================================================================================
+  | SECTION OUR TEAM
+  |=====================================================================================================
+*/
 
-
-/* ================================SECTION OUR TEAM============================= */
-/* .section.team {
+.section.team {
     background-color: var(--color-cloud);
+    padding-bottom: 128px;
+
 }
+.img-wrap{
+display: flex;
+align-items: center;
+justify-content: center;
+margin-bottom: 32px;
+}
+
+.team-list-item:not(:last-child){
+    margin-bottom: 72px;}
+
+
+.team-list-title{
+margin-bottom: 8px;
+font-weight: 500;
+font-size: 20px;
+line-height: calc(24/20);
+text-align: center;}
+
+.team-list-text{
+/* font-weight: 400;
+font-size: 16px; */
+margin-bottom: 8px;
+line-height: calc(24/16);
+text-align: center;
+color: var(--primary-text-color);
+}
+
+.team-social-list {
+    display: flex;
+    align-items: center;
+justify-content: center;
+    gap: 24px;
+
+}
+.team-social-list-item
+{
+    width: 40px;
+    height: 40px;
+}
+
+.team-social-list-link
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--accent-color);
+    
+    transition: background-color var(--transition-dur-and-func);
+}
+.team-social-list-icon{
+    fill: var(--color-cloud);
+}
+.team-social-list-link:hover,
+.team-social-list-link:focus {
+    background-color: var(--hover-color);
+}
+/* ===========================Tablet styles============================ */
+@media screen and (min-width: 768px){
+    .team-list-item:not(:last-child){
+        margin-bottom: 0;
+    }
+    .team-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    column-gap: 24px;
+    row-gap: 64px;
+    }
+
+    /* .team-list-item {
+    flex-basis: calc((100% - 24px) /2);
+ */
+
+
+
+}
+
+
+
+/* ===========================Desktop styles============================ */
+@media screen and (min-width: 1200px){
+
+.team-list{
+    display: flex;
+    gap: 24px;}
+
+
+.team-social-list {
+    display: flex;
+    justify-content: center;}
 
 .team-list-item {
     flex-basis: calc((100%-72px)/4);
@@ -786,8 +880,18 @@ img {
     border-radius: 0px 0px 4px 4px;
 }
 
+.team-list-title {
+    margin-bottom: 8px;
+    color: var(--title-color);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: calc(24/20);
+    text-align: center;}
+
+
 .team-list-text{
     margin-bottom: 8px;
+    line-height: 1.5;
 }
 
 .team-desc{
@@ -809,7 +913,30 @@ img {
 .team-social-list-link:hover,
 .team-social-list-link:focus {
     background-color: var(--hover-color);
-} */
+}
+
+.team-social-list-item
+{
+    width: 40px;
+    height: 40px;
+}
+
+.team-social-list-link
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.team-social-list-icon{
+    fill: var(--color-cloud);
+}
+}
+
+
 /* =======================================CUSTOMERS=========================== */
 /* .section.customers{
     padding-top: 130px;
