--- a/css/styles.css
+++ b/css/styles.css
@@ -971,7 +971,6 @@ gap: 24px;
     .subscribe-form{
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
     justify-content: center;
 }
 
@@ -1002,7 +1001,7 @@ gap: 24px;
     .submit-btn{
         display: flex;
         align-items: center;
-        text-align: center;
+        justify-content: center;
         gap: 16px;
     
         min-width: 165px;
@@ -1025,129 +1024,55 @@ gap: 24px;
 
 /* ===========================Tablet styles============================ */
 @media screen and (min-width: 768px){
-    
+    .footer-box{
+        display: flex;
+        align-items: baseline;
+        flex-wrap: wrap;
+    }
+    .footer-desc{
+        max-width: 264px;
+        margin-left: 0;
+    margin-right: 24px;
+    }
+
+    .social-links{
+        margin-bottom: 0;
+    }
+
+    .subscribe-form{
+        align-items: baseline;
+    }
+    .email-form-desc{
+        margin-right: 24px;
+        width: 264px;
+    }
+
+    .subscribe-text{
+        text-align: start;}
+
+    .footer-text {
+        width: 264px;
+    }
 }
 
-
-
-
+/* ===========================Desktop styles============================ */
 
   @media screen and (min-width: 1200px){
 .footer{
     padding-top: 100px;
     padding-bottom: 100px;
-    background-color: var(--title-color);
 }
 
 .footer-box{
-    display: flex;
-    align-items: baseline;
+    flex-wrap: nowrap;
 }
-
-.footer-text {
-    width: 264px;
-    margin-top: 16px;
-
-    color: var(--color-cornflower);
-    line-height: 1.5;
-}
-
 .footer-desc{
     margin-right: 120px;
+    margin-bottom: 0;
 }
 
 .social-links{
     margin-right: 80px;
-}
-
-.social-list-title{
-    margin-bottom: 16px;
-
-    font-weight: 500;
-    line-height: calc(24/16);
-    color: var(--white-color);
-}
-
-.social-list{
-    gap: 16px;
-}
-
-.social-list-link{
-    background-color: rgba(255, 255, 255, 0.1);
-
-    transition: background-color var(--transition-dur-and-func);
-}
-
-.social-list-link:hover,
-.social-list-link:focus{
-    background-color: #31D0AA;
-    }
-
-/* ============Subscribe-form-field============== */
-
-.subscribe-text{
-    margin-bottom: 16px;
-
-    font-weight: 500;
-    line-height: 1.5;    
-    color: var(--white-color);
-}
-
-
-.subscribe-form{
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-}
-
-.email-form-desc{
-    margin-right: 24px;
-    width: 264px;
-}
-
-.email-form-input{
-    
-    width: 100%;
-    padding: 7px 16px;
-
-    color: var(--white-color);
-    line-height: 1.5;
-    background-color: var(--title-color);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-}
-
-.email-form-input::placeholder{
-    font-size: 12px;
-    line-height: 2;
-    letter-spacing: 0.04em;
-    color: rgba(255, 255, 255, 0.6);   
-}
-
-
-.submit-btn{
-    display: flex;
-    align-items: center;
-    text-align: center;
-    gap: 16px;
-
-    min-width: 165px;
-    padding: 8px 24px;
-
-    background-color: var(--accent-color);
-    border: none;
-    border-radius: 4px;
-
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: var(--white-color);
-    cursor: pointer;
-}
-
-.icon-airplane{
-    fill: var(--white-color);
 }}
 
 /* ======================================PORTFOLIO STYLES=========================== */
