--- a/css/styles.css
+++ b/css/styles.css
@@ -1180,8 +1180,7 @@ gap: 24px;
 } */
 
  /* ===================================================MODAL WINDOW================================================== */
- 
-/* .backdrop {
+ .backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -1203,10 +1202,10 @@ gap: 24px;
     position: absolute;
     top: 50%;
     left: 50%;
-    padding: 72px 24px 24px;
+    padding: 72px 16px 24px;
 
-    width: 408px;
-    height: 584px;
+    width: 392px;
+    height: 586px;
     background-color: var(--modal-background-color);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -1214,8 +1213,6 @@ gap: 24px;
     transform: translate(-50%, -50%) scale(1);
     transition: transform var(--transition-dur-and-func);
 }
-
-    
 .backdrop.is-hidden .modal{
     transform: translate(-50%, -50%) scale(1.2);
 }
@@ -1255,7 +1252,7 @@ gap: 24px;
 .modal-heading {
     display: block;
     text-align: center;    
-    margin-bottom: 14px;
+    margin-bottom: 16px;
 
     font-weight: 500;
     line-height: 1.5;
@@ -1334,8 +1331,6 @@ gap: 24px;
     resize: none;
     font-size: 14px;
     line-height: 1.5;
-
-    transition: border var(--transition-dur-and-func);
 }
 
 .modal-form-message::placeholder{
@@ -1343,12 +1338,12 @@ gap: 24px;
     line-height: 1.33;
     letter-spacing: 0.04em;
     color: rgba(117, 117, 117, 0.5);
-} */
+}
 
 
 /* fake checkbox */
 
-/* .modal-form-check-fake{
+.modal-form-check-fake{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1411,5 +1406,43 @@ gap: 24px;
     letter-spacing: 0.04em;
     color: var(--white-color);
     cursor: pointer;
-}
- */
+    }
+ /* ===========================Tablet styles============================ */
+@media screen and (min-width: 768px){
+    .modal {
+        padding: 72px 24px 24px;
+        width: 408px;
+}}
+
+ 
+ 
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+ 
+ 
+ 
+ 
+ 
+
+
+
