--- a/css/styles.css
+++ b/css/styles.css
@@ -49,20 +49,6 @@ img {
   |============================
 */
 
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-      }
-
 .button {
     font-weight: 500;
     font-size: 16px;
@@ -75,6 +61,7 @@ img {
 .section {
     padding-top: 96px;
     padding-bottom: 96px;
+    outline: 1px solid green;
 }
 @media screen and (min-width: 1200px) {
     .section {
@@ -123,7 +110,18 @@ img {
     fill: var(--color-cloud);
 } 
 
-  
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+      }
 
 /**
   |=========================================================
@@ -299,7 +297,6 @@ img {
     margin-bottom: 48px;
 }
 
- 
   .mobile-menu .link {
     display: block;
     padding: 10px;
@@ -385,6 +382,8 @@ img {
         display: block;
         margin-left: auto;
     }
+
+
     .contacts-link{
         text-decoration: none;
         font-size: 12px;
@@ -430,76 +429,11 @@ img {
     }
 }
 
-
-/*========================= COMPONENTS============================= */
-
-
-
-/*
-
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
-.container {
-    width: 1158px;
-    padding: 0 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.menu-link.current {
-    color: var(--hover-color);
-    position: relative;
-}
-
-.menu-link.current::after{
-    display: block;
-    content: "";
-    width: 100%;
-    height: 4px;
-    background-color: var(--hover-color);
-    border-radius: 2px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-
-
-.menu-item:not(:last-child),
-.contacts-item:not(:last-child) {
-    margin-right: 40px;
-}
-
-.button {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-
-.menu-link,
-.contacts-link {
-    display: block;
-    padding-top: 24px;
-    padding-bottom: 24px;
-
-    text-decoration: none;
-    line-height: 1.5;
-}
-
-
-
-
-
-
-
-/* ===================================SECTION HERO============================= */
+/**
+  |=======================================================================================
+  | SECTION HERO
+  |=======================================================================================
+*/
 .hero {
     padding-top: 112px;
     padding-bottom: 112px;
@@ -634,7 +568,6 @@ img {
 } 
 
 
-
 /**
   |================================================================================================
   | SECTION OUR FEATURES
@@ -652,9 +585,6 @@ img {
     color: var(--title-color);}
 
 
-
-
-    
 .features-list-text{
     font-weight: 500;
     line-height: calc(24/16);
@@ -672,13 +602,6 @@ img {
             line-height: calc(40/36);
             }
     }
-
-/* 
-.portfolio-list-title,
-.features-list-title {
-    margin-bottom: 8px;
-} */
-
 
     @media screen and (min-width: 768px){
     .features-list-title{
@@ -719,8 +642,7 @@ img {
         background-color: var(--color-cloud);
     }
     
-    /* 
-    .portfolio-list-title */
+    
     .features-list-title{
     color: var(--title-color);
     font-weight: 500;
@@ -732,12 +654,7 @@ img {
         font-weight: 400;}
     }
 
-    /* 
-    .portfolio-list-text {
-        line-height: 1.5;} */
-
-
-
+    
 /**
   |================================================================================================
   | SECTION OUR WORK
@@ -756,7 +673,7 @@ img {
         flex-basis: calc((100%-48px)/3);}
     
     
-        /* .features-list*/
+    
         .work-list {
             display: flex;
             gap: 24px;
@@ -801,8 +718,6 @@ line-height: calc(24/20);
 text-align: center;}
 
 .team-list-text{
-/* font-weight: 400;
-font-size: 16px; */
 margin-bottom: 8px;
 line-height: calc(24/16);
 text-align: center;
@@ -913,7 +828,7 @@ gap: 24px;
     padding-bottom: 96px;
     background-color: var(--title-color);
 }
-.logo{
+.logo.footer-desc{
     display: block;
     text-align: center;
     margin-bottom: 16px;
