--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ img {
     color: var(--accent-color);
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
-    line-height: 1.17;
+    line-height: calc(21/18);
     letter-spacing: 0.03em;
     text-decoration: none;
     text-transform: uppercase;
@@ -338,7 +338,6 @@ img {
 
 @media screen and (min-width:768px) {
     .logo{
-        line-height: 1.3;
         padding-top: 0;
         padding-bottom: 0;
     }
@@ -582,8 +581,6 @@ img {
     display: none;
 }
 
-/* 
-.portfolio-list-title */
 .features-list-title{
     margin-bottom: 8px;
     text-align: center;
@@ -594,20 +591,12 @@ img {
     font-weight: 500;
     line-height: calc(24/16);
     }
+
+.features-list-item:not(:last-child){
+        margin-bottom: 72px;}
+/* ===========================Tablet styles============================ */
+  
     
-    @media screen and (max-width: 768px){
-        .features-list-item:not(:last-child){
-            margin-bottom: 72px;}
-    }
-
-    @media screen and (max-width: 1200px){
-        .features-list-title{
-            font-weight: 700;
-            font-size: 36px;
-            line-height: calc(40/36);
-            }
-    }
-
     @media screen and (min-width: 768px){
     .features-list-title{
     text-align: start;
@@ -615,6 +604,8 @@ img {
     .features-list{
         display: flex;
     }  
+    .features-list-item:not(:last-child){
+        margin-bottom: 0;}
 }
 
 @media screen and (min-width: 768px) and (max-width: 1200px){
@@ -625,18 +616,25 @@ img {
         row-gap: 72px;
     }
     .features-list-item {
-        max-width: 356px;
-        flex-basis: calc((100%-24px)/2);
+        flex-basis: calc((100% - 24px)/2);
     }
 }
-
+@media screen and (max-width: 1200px){
+    .features-list-title{
+        font-weight: 700;
+        font-size: 36px;
+        line-height: calc(40/36);
+        }
+}
 
 @media screen and (min-width: 1200px){
     .features-list{
+        flex-wrap: nowrap;
         gap: 24px;
     }
 
-    .features-list-item{flex-basis: calc((100%-72px)/4);}
+    .features-list-item{
+        flex-basis: calc((100% - 72px)/4);}
     
     .thumb{
         display: flex;
@@ -676,8 +674,6 @@ img {
 }
     .work-list-item {
         flex-basis: calc((100%-48px)/3);}
-    
-    
     
         .work-list {
             display: flex;
@@ -944,6 +940,9 @@ gap: 24px;
 
 /* ===========================Tablet styles============================ */
 @media screen and (min-width: 768px){
+    .logo.footer-desc{
+        text-align: start;}
+
     .footer-box{
         display: flex;
         align-items: baseline;
@@ -995,9 +994,13 @@ gap: 24px;
     margin-right: 80px;
 }}
 
-/* ======================================PORTFOLIO STYLES=========================== */
-
-/* .section.portfolio {
+/**
+  |=====================================================================================================
+  | PORTFOLIO STYLES
+  |=====================================================================================================
+*/
+@media screen and (min-width: 1200px){
+.section.portfolio {
     padding-top: 96px;
 }
 
@@ -1097,7 +1100,7 @@ gap: 24px;
 .portfolio-list-link:hover .overlay,
 .portfolio-list-link:focus .overlay{
     transform: translateY(0);
-} */
+}}
 
  /* ===================================================MODAL WINDOW================================================== */
  .backdrop {
