--- a/css/styles.css
+++ b/css/styles.css
@@ -44,9 +44,9 @@ img {
 }
 
 /**
-  |============================
+  |======================================================================================================
   | COMPONENTS
-  |============================
+  |======================================================================================================
 */
 
 .button {
@@ -65,12 +65,10 @@ img {
 }
 @media screen and (min-width: 1200px) {
     .section {
-        padding-top: 120px;
-        padding-bottom: 120px;
+    padding-top: 120px;
+    padding-bottom: 120px;
     }}
 
-
-/* стилі всюди однакові */
 .section-title {
     margin-bottom: 72px;
 
@@ -81,7 +79,7 @@ img {
     text-transform: capitalize;
 }
 
-/* Social media links */
+/* =======Social media links=========== */
 
 .social-list,
 .team-social-list {
@@ -124,9 +122,9 @@ img {
       }
 
 /**
-  |=========================================================
+  |===============================================================================================================
   | Container styles
-  |=========================================================
+  |===============================================================================================================
 */
 
 .container {
@@ -195,7 +193,8 @@ img {
     background-color: transparent;
     border: none;
     padding: 0;
-        }
+    cursor: pointer;
+    }
 
 @media screen and (min-width:768px) {
     .mobile-menu-btn{
@@ -207,18 +206,17 @@ img {
     position: fixed;
     top: 0;
     left: 0;
+    padding: 80px 35px 40px 40px;
     width: 100%;
     height: 100%;
     background-color: var(--white-color);
     z-index: 900;
 
-    padding: 80px 35px 40px 40px;
-    
     transform: translateX(100%);
     transition: var(--transition-dur-and-func);
   }
 
-  .menu-container.is-open {
+.menu-container.is-open {
     transform: translateX(0);
   }
   
@@ -237,13 +235,12 @@ img {
     border-radius: 50%;
     cursor: pointer;
     transition: background-color var(--transition-dur-and-func);
-
     margin: 0; 
   }
   
 
-  .mobile-menu-btn-close:hover,
-  .mobile-menu-btn-close:focus{
+.mobile-menu-btn-close:hover,
+.mobile-menu-btn-close:focus{
     background-color: var(--hover-color);
   }
   .mobile-close-btn-icon{
@@ -302,13 +299,7 @@ img {
     margin-bottom: 48px;
 }
 
-  .mobile-menu .link {
-    display: block;
-    padding: 10px;
-    color: black;
-    text-decoration: none;
-  }
-
+ 
 /* Mobile menu social links */
   .mobile-menu-list{
     display: flex;
@@ -387,7 +378,6 @@ img {
         margin-left: auto;
     }
 
-
     .contacts-link{
         text-decoration: none;
         font-size: 12px;
@@ -405,7 +395,7 @@ img {
 } 
 }
 
-/* Desktop styles */
+/* ===========================Desktop styles============================  */
 @media screen and (min-width:1200px){
     .header {
         border-bottom: 1px solid var(--color-cornflower);}
@@ -442,18 +432,17 @@ img {
     padding-top: 112px;
     padding-bottom: 112px;
     text-align: center;
-
     max-width: 1440px;
     margin-right: auto;
     margin-left: auto;
 
-    
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(../images/hero/hero_mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-color: var(--title-color);}
+    background-color: var(--title-color);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url(../images/hero/hero_mob.jpg);
+    }
 
     
     @media (min-device-pixel-ratio: 2),
@@ -461,11 +450,8 @@ img {
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero_mob@2x.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-color: var(--title-color);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+     url(../images/hero/hero_mob@2x.jpg);
   }
 }
 
@@ -473,55 +459,39 @@ img {
     .hero {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         url(../images/hero/hero_tab.jpg);
-        background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-color: var(--title-color);
     }
 @media (min-device-pixel-ratio: 2),
     (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .hero {
-      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero_tab@2x.jpg);
-      background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-color: var(--title-color);
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+       url(../images/hero/hero_tab@2x.jpg);
     }
   }}
   
-
 
   @media screen and (min-width: 768px) {
     .hero {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         url(../images/hero/hero_desk.jpg);
-        background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-color: var(--title-color);
     }
     @media (min-device-pixel-ratio: 2),
     (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .hero {
-      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero_desk@2x.jpg);
-      background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-color: var(--title-color);
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+       url(../images/hero/hero_desk@2x.jpg);
     }
   }}
 
 
-  @media screen and (min-width: 768px){
-  .hero {
+   @media screen and (min-width: 768px){
+    .hero {
     padding-bottom: 108px;}}
-
-
-
+    
+    
     @media screen and (min-width: 1200px){
         .hero {
     padding-top: 188px;
@@ -570,7 +540,6 @@ img {
 .hero-btn:focus {
     background-color: var(--hover-color);
 } 
-
 
 /**
   |================================================================================================
@@ -657,7 +626,6 @@ img {
         font-weight: 400;}
     }
 
-    
 /**
   |================================================================================================
   | SECTION OUR WORK
@@ -680,7 +648,6 @@ img {
             gap: 24px;
         }
     }
-
 
 /**
   |=====================================================================================================
@@ -999,6 +966,115 @@ gap: 24px;
   | PORTFOLIO STYLES
   |=====================================================================================================
 */
+
+.section.portfolio{
+    padding-top: 48px;
+    padding-bottom: 48px;
+}
+
+.filter {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    margin-bottom: 48px;
+}
+
+.filter-btn {
+    padding: 8px 16px;
+    color: var(--accent-color);
+    background-color: var(--color-cloud);
+    border: 1px solid var(--color-cornflower);
+
+    transition: background-color var(--transition-dur-and-func), color var(--transition-dur-and-func),
+     border-color var(--transition-dur-and-func), box-shadow var(--transition-dur-and-func);
+}
+
+.portfolio-list{
+    display: flex;
+    flex-wrap: wrap;
+    
+    
+}
+.portfolio-list-title {
+    color: var(--title-color);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: calc(24/20);
+    margin-bottom: 8px;
+}
+
+.portfolio-list-img-box{
+    position: relative;
+    overflow: hidden;
+
+}
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 40px 32px;
+    background-color: var(--accent-color);
+    line-height: 1.5;
+    color: var(--color-cloud);
+    overflow: auto;
+
+    transform: translateY(100%);
+    transition: transform var(--transition-dur-and-func);
+}
+
+.wrapper{
+    padding-top: 32px;
+    padding-bottom: 32px;
+    padding-left: 16px;
+    border: 1px solid var(--color-cornflower);
+    border-top: none;
+
+    transition: border var(--transition-dur-and-func);
+}
+
+.portfolio-list-text {
+    line-height: 1.5;
+} 
+.portfolio-list-link{
+    display: block;
+    text-decoration: none;
+    color:inherit;
+    
+    transition: box-shadow var(--transition-dur-and-func);
+ }
+
+ .portfolio-list-link:hover,
+ .portfolio-list-link:focus{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+
+ }
+
+.portfolio-list-link:hover .wrapper,
+.portfolio-list-link:focus .wrapper{
+    border: 0.5px solid var(--color-cloud);
+    border-top: none;
+}
+
+
+.portfolio-list-link:hover .overlay,
+.portfolio-list-link:focus .overlay{
+    transform: translateY(0);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (min-width: 1200px){
 .section.portfolio {
     padding-top: 96px;
@@ -1032,6 +1108,23 @@ gap: 24px;
     border-color: var(--hover-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.portfolio-list-title {
+    color: var(--title-color);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+}
+
+
+.portfolio-list-title
+{
+    margin-bottom: 8px;
+}
+
+
+.portfolio-list-text {
+    line-height: 1.5;
+} 
 
 
 .portfolio-list{
